--- a/style.css
+++ b/style.css
@@ -66,4 +66,30 @@ main {
 }
 
 .featured-books {
-  margin-top
+  margin-top: 20px;
+}
+
+.book {
+  display: inline-block;
+  width: 200px;
+  text-align: center;
+  margin: 10px;
+}
+
+.book img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.book h3 {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.book p {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 10px;
+}
